# arxiv-scrapper

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  diesel.toml  docker-compose.yaml
.github/workflows/: main.yml
.sqlx/: query-11e661c210e4afc787b3efc568620e6a0098247c5d0a554954d7b48a6eaa0007.json  query-14df28a299f34ed4a0570d84bb1602ccebb32295b1fd2b38009457699074de32.json  query-8aa75132f9e8db14000d5389827f543e9e4f111cf114309d8f4078bb0ff43d8a.json  query-af0b213b5f9ffcc98413eab18ed32cdc83abe23622177b7c692b2be8efc1087c.json
db/: init.sql
migrations/2023-09-21-141506_papers/: down.sql  up.sql
scraper/: Cargo.toml
scraper/src/: main.rs  scraper.rs
scrapper/: Cargo.toml
scrapper/src/: main.rs  scraper.rs
search/: Cargo.toml
search/src/: cli.rs  config.rs  engine.rs  logger.rs  main.rs  server.rs
shared/: .gitignore  Cargo.toml  docker-compose.yaml
shared/db/: init.sql
shared/migrations/2023-09-21-141506_papers/: down.sql  up.sql
shared/src/: db.rs  models.rs
src/: config.rs  db.rs  logger.rs  main.rs  models.rs  schema.rs  scraper.rs
