[package]
name = "search-arxiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.3", features = ["derive"] }
console = "0.15.7"
futures = "0.3.28"
indicatif = "0.17.6"
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
reqwest = "0.11.20"
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
