[package]
name = "arxiv-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arxiv-shared = { path = "../shared/" }
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
console = "0.15.7"
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = "0.3.28"
glib = "0.18.2"
indicatif = "0.17.6"
log = "0.4.20"
poppler-rs = { version = "0.22.0", features = ["v0_82"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["stream"] }
scraper = "0.18.1"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
