[package]
name = "arxiv-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arxiv-shared = { path = "../shared/" }
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
diesel = { version = "2.1.1", features = ["postgres"] }
dotenvy = "0.15.7"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.20"
regex = "1.9.5"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tantivy = { version = "0.21.1", features = ["zstd-compression"] }
dialoguer = { version = "0.11.0", features = ["history"] }
console = "0.15.7"
indicatif = "0.17.7"
axum = { version = "0.6.20", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = "4.1.0"
utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
