[package]
name = "arxiv-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.20"
thiserror = "1.0.48"
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
] }
